[FIX] website: reCaptcha option alignment issue
Steps to Reproduce:
1. Go to Settings and search for reCAPTCHA.
2. Add the required keys.
3. Go to Website and enter edit mode.
4. Drop any Contact Form snippet.
5. Make the labels to top.
6. Enable the Show reCAPTCHA option.
7. Notice an unnecessary blank space before the privacy policy line.

Issue:
The reCAPTCHA line created unnecessary blank space when aligned
to the left.

Reason:
The line was placed inside the form block, which reserves
space for a label. Since reCAPTCHA has no label, an empty
placeholder space appeared.

Fix:
Hide the unused label by setting its visibility to none for
the reCAPTCHA line, removing the extra blank space.

task-4756289

--- a/addons/website/static/src/snippets/s_website_form/001.scss
+++ b/addons/website/static/src/snippets/s_website_form/001.scss
@@ -53,7 +53,7 @@
         display: none;
     }
 
-    .s_website_form_submit, .s_website_form_recaptcha {
+    .s_website_form_submit {
         .s_website_form_label {
             float: left;
             height: 1px;
